--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,12 @@ h4 {
     line-height: 1.2em;
 }
 
+header svg.icon__xl {
+    height: 1.2em;
+    width: auto;
+    fill: currentColor;
+}
+
 .header {
     width: 100%;
     background-color: var(--color-light);
@@ -47,6 +53,8 @@ h4 {
 
 .hamburger {
     display: none;
+    font-size: 28px;
+    cursor: pointer;
 }
 
 nav li a {
@@ -55,13 +63,66 @@ nav li a {
     align-items: center;
     padding: 10px 20px;
     text-decoration: none;
+    font-weight: 500
 }
 
 nav.main-nav ul {
     display: flex;
     list-style: none;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+}
+nav.main-nav ul li a {
+    text-decoration: none;
+    font-weight: 500;
+    color: var(--color-text);
 }
 
+nav.main-nav .box-buttons {
+    margin-left: 20px;
+}
+
+@media (max-width: 799px) {
+
+    /*  hamburguesa */
+    .hamburger {
+        display: block;
+    }
+
+    /* Ocultar menú horizontal */
+    nav.main-nav ul,
+    nav.main-nav .box-buttons {
+        display: none;
+    }
+
+    /* Menu activo al abrir hamburguesa */
+    nav.main-nav.active ul {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        background-color: var(--color-light);
+        position: absolute;
+        top: 134px; /* ajustar según el header */
+        right: 20px;
+        width: 100%;
+        padding: 15px;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+        z-index: 100;
+    }
+
+    nav.main-nav.active .box-buttons {
+        display: block;
+        margin-top: 10px;
+    }
+
+    nav.main-nav.active ul li a {
+        font-weight: 500;
+        color: var(--color-text);
+    }
+}
 .main-post {
     background: var(--color-bg);
     padding: 50px 20px;
@@ -75,7 +136,7 @@ nav.main-nav ul {
     display: flex;
 }
 
-.content-box>div {
+.content-box div {
     box-sizing: border-box;
 }
 
@@ -104,8 +165,6 @@ nav.main-nav ul {
 }
 
 /*------------------- Botón --------------------------*/
-
-
 
 .btn-blue {
     display: inline-block;
@@ -178,7 +237,7 @@ nav.main-nav ul {
     overflow: hidden;
 }
 
-.section-3 .card{
+.section-3 .card {
     background-color: #bad7ea;
     border: 1px solid #abc7da;
 }
@@ -251,4 +310,28 @@ p {
 
 .center {
     text-align: center;
+}
+/*------------------- footer --------------------------*/
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+    justify-content: center;
+    gap: 20px;           
+    padding: 20px 0;
+    background-color: var(--color-light);
+    text-align: center;    
+}
+
+footer p {
+    margin: 0;
+}
+
+.social-footer ul {
+    display: flex;
+    list-style: none;
+    gap: 20px;            /* espacio entre los íconos o links */
+    padding: 0;
+    margin: 0;
+    justify-content: center;
 }
